Done with media queries, except for some unwanted iframe ad-clipping (which I'll fix later).

--- a/app/assets/stylesheets/new/programs.css.scss
+++ b/app/assets/stylesheets/new/programs.css.scss
@@ -828,6 +828,14 @@ NEOTERIC MEDIA QUERIES
       margin-left: -5.5%;
       padding: 40px 5.5%;
       & > .archive                  { margin-bottom: 0; }
+      .plug {
+        border-bottom: 1px solid rgba(0,0,0,0.15);
+        margin: 0 0 40px -5.5%;
+        width: 100%;
+        padding: 0 5.5% 30px;
+      }
+      .plug iframe                  { margin: 0 auto 12px; }
+      .plug .appeal                 { text-align: center; }
     }
 
   }
@@ -997,7 +1005,110 @@ The intermission-y mishmash section of Team, Quote, Exemplary, and Ad C.
       }
     }
   }
-}
+}// . interregnum
+
+
+/*
+###############################################################################
+###############################################################################
+
+INTERREGNUM MEDIA QUERIES
+
+###############################################################################
+############################################################################### */
+
+.interregnum {
+//----------------------------------------------------------------------------------
+  @media screen and (max-width: 950px) {
+
+    background: #f2f2f2;
+    & > .inner                { background: #f2f2f2; }
+    .team {
+      width: 100%;
+      margin-left: -5.5%;
+      padding: 30px 5.5%;
+      box-shadow: inset 0 6px 0 black;
+      float: none;
+      background: #333333;
+      h1 {
+        padding: 0 0 7px;
+        border-top: none;
+        border-bottom: 1px solid rgba(255,255,255,0.2);
+        margin-bottom: 20px;
+      }
+      figure {
+        width: 17.6%;
+        margin-right: 3%;   // comfortably five across
+        &:nth-child(2n+1)   { margin-right: 3%; }
+        &:last-child        { margin-right: 0; }
+        &:nth-child(6n)     { clear: both; }
+      }
+    }
+    .melange                { width: 100%; float: none; }
+    .quote                  { width: 100%; margin-left: -5.5%; padding: 0 5.5% 35px; }
+    .diptych {
+      background: image-url("i/ephemera-program-dot-lightgray.png") repeat-y 65.563598759049% top;
+      background-size: 1px 1px;
+    }
+    .exemplary {
+      margin-left: 0;
+    }
+
+  }
+//----------------------------------------------------------------------------------
+  @media screen and (max-width: 845px) {
+
+    blockquote              { padding-top: 20px; padding-left: 3%; margin-left: -3%; }
+    blockquote p            { font-size: 1.75em; margin-bottom: 18px; margin-left: 0; }
+    .exemplary h2           { font-size: 1.25em; }
+
+  }
+//----------------------------------------------------------------------------------
+  @media screen and (max-width: 780px) {
+
+    .diptych                { background: none; }
+    .plug                   { float: none; width: 100%; }
+    .plug iframe            { margin: 0 auto 10px; }
+    .plug .appeal           { text-align: center; }
+    .exemplary {
+      float: none;
+      width: 100%;
+      padding-bottom: 30px;
+      border-bottom: 1px solid rgba(0,0,0,0.2);
+      margin-bottom: 30px;
+      .photo                { width: 33%; }
+      .prose                { width: 62%; }
+    }
+
+  }
+//----------------------------------------------------------------------------------
+  @media screen and (max-width: 520px) {
+
+    .team {
+      figure {
+        width: 31%;
+        margin-right: 3.5%;   // comfortably three across
+        &:nth-child(2n+1)     { margin-right: 3.5%; }
+        &:nth-child(3n),
+        &:last-child          { margin-right: 0; }
+        &:nth-child(4n)       { clear: both; }
+        figcaption            { font-size: 0.8125em; }
+      }      
+    }
+
+  }
+//----------------------------------------------------------------------------------
+  @media screen and (max-width: 465px) {
+
+    .exemplary {
+      .photo                { float: none; width: 100%; margin-bottom: 15px; }
+      .prose                { float: none; width: 100%; }
+    }
+
+  }
+//----------------------------------------------------------------------------------
+
+}// .interregnum
 
 
 
@@ -1079,5 +1190,37 @@ Don't like this show? That's fine, here's four others.
 
 
 
+/*
+###############################################################################
+###############################################################################
 
+OTHER-PROGRAMS MEDIA QUERIES
+
+###############################################################################
+############################################################################### */
+
+.other-programs {
+//----------------------------------------------------------------------------------
+  @media screen and (max-width: 950px) {
+
+    & > header h1         { font-size: 1.25em; }
+    .troupe               { padding-bottom: 10px; }
+    article {
+      width: 48%;
+      margin: 0 4% 30px 0;
+      &:nth-child(even)   { margin-right: 0; }
+      &:nth-child(odd)    { clear: both; }
+    }
+
+  }
+//----------------------------------------------------------------------------------
+  @media screen and (max-width: 500px) {
+
+    article               { width: 100%; float: none; margin: 0 0 40px; }
+    footer                { font-size: 1em; }
+
+  }
+//----------------------------------------------------------------------------------
+
+}
 
